# TCM2Dekatron

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  Makefile  README.md  app.py  config.json  constraints.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
docs/: migration_blueprint.md  raspberry_pi_optimization.md
pliki od klienta/: TCM 2.0 opis.docx  app.py
tcm/: __init__.py  compose.dev.yaml  compose.yaml
tcm/app/: README.md  __init__.py  dependencies.py  main.py  rate_limit.py
tcm/app/api/: __init__.py  models.py  state.py  v1.py
tcm/app/core/: config.py  control_loop.py  database.py  hardware.py  secrets.py  sensors.py  state.py
tcm/app/security/: auth.py
tcm/app/services/: logging.py  strike.py  users.py
tcm/app/static/: style.css
tcm/app/static/js/: dashboard.js  panel-operator.js  toast.js
tcm/app/static/ts/: dashboard.ts  globals.d.ts  panel-operator.ts  toast.ts
tcm/app/templates/: 429.html  base.html  dashboard.html  login.html  logs.html  panel_operator.html  panel_serwis.html  panel_technik.html
tcm/app/templates/components/: event_table.html
tcm/config/: app.yaml
tcm/deploy/ca/: README.md
tcm/deploy/reverse-proxy/: nginx.conf
tcm/deploy/reverse-proxy/conf.d/: app.conf  health.conf
tcm/docker/: app.Dockerfile  entrypoint.sh  proxy.Dockerfile  start.sh
tcm/scripts/: export_sqlite.py  gen-ca.sh  generate_secrets.py  install-systemd.sh
tcm/secrets/: README.md
tcm/tests/: test_api_v1.py
tcm/tests/e2e/: README.md
