[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
exclude = [
  "/(\.git|\.mypy_cache|\.pytest_cache|\.venv|venv|build|dist|node_modules)/",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "venv",
  ".venv",
  "node_modules",
]
per-file-ignores = {}

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["tcm"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
